13-ingress/04-service-app2.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v2-svc
spec:
  selector:
    app: hello-v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
