13-ingress/05-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: v1.helloworld.local
    http:
      paths:
      - backend:
          serviceName: hello-v1-svc
          servicePort: 80
  - host: v2.helloworld.local
    http:
      paths:
      - backend:
          serviceName: hello-v2-svc
          servicePort: 80
