13-ingress/08-ingress-hello.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: hello-world-ingress
  namespace: default
spec:
  rules:
  - host: www.kadevl.com
    http:
      paths:
      - backend:
          serviceName: hello-v1-svc
          servicePort: 80
